--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+// @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
+body {
+  // font-family: 'Quicksand', sans-serif;
+  font-family: "Shadows Into Light", cursive;
+}
+
+.header {
+  contain: "";
+  height: 40vh;
+  width: 100%;
+  color: #fff;
+  background: linear-gradient(45deg, #ff0021, #877ff3);
+  // border-radius: 0 0 20% 20% / 0 0 100% 100%;
+}
+// .header:after{
+//     content: '';
+//     position: absolute;
+//     bottom: 0;
+//     width: 100%;
+//     background-image: url('./assets/wave.svg');
+//     height: 175px;
+// }
+
+.container {
+  width: 70%;
+}
+.body-bg {
+  background-color: #f2f2f2;
+}
