--- a/src/app/utility/footer/footer.component.html
+++ b/src/app/utility/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<section>
+  <div class="py-3 bg-dark">
+    <h6 class="text-white text-center">Angular Real time interview</h6>
+  </div>
+</section>
