--- a/src/app/utility/header/header.component.html
+++ b/src/app/utility/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div
-    class="container d-flex justify-content-start align-items-end h-100 w-100"
+    class="col-lg-8 col-md-8 col-sm-12 offset-2 d-flex align-items-end h-100"
   >
     <h1 class="pb-5">Angular Interview</h1>
   </div>
