--- a/src/app/utility/footer/footer.component.html
+++ b/src/app/utility/footer/footer.component.html
@@ -1,5 +1,7 @@
 <section>
   <div class="py-3 bg-dark">
-    <h6 class="text-white text-center">Angular Real time interview</h6>
+    <h5 class="text-white text-center text-capitalize">
+      real time interview questions
+    </h5>
   </div>
 </section>
