--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,10 @@
-<section class="py-4 body-bg">
+<section class="body-bg">
   <div class="d-flex justify-content-center">
     <div class="col-lg-8 col-sm-12">
-      <h3 class="pb-3">
+      <h3 class="pt-4">
         <span class="text-danger">&#9830;</span> Question & Answer
       </h3>
-      <div id="accordion">
+      <div id="accordion" class="pb-5 pt-3">
         <dx-accordion
           #accordion
           [dataSource]="questionAnswer"
