--- a/src/app/utility/header/header.component.html
+++ b/src/app/utility/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
-  <div
-    class="col-lg-8 col-md-8 col-sm-12 offset-2 d-flex align-items-end h-100"
-  >
-    <h1 class="pb-5">Angular Interview</h1>
+  <div class="d-flex justify-content-center align-items-end h-100">
+    <div class="col-lg-8 col-md-8 col-sm-12">
+      <h1 class="pb-5">Angular Interview</h1>
+    </div>
   </div>
 </div>
