--- a/src/app/utility/footer/footer.component.html
+++ b/src/app/utility/footer/footer.component.html
@@ -1,7 +1,9 @@
 <section>
-  <div class="py-3 bg-dark">
-    <h5 class="text-white text-center text-capitalize">
-      real time interview questions
-    </h5>
+  <div class="bg-dark p-2">
+    <div class="container">
+      <p class=" py-3 text-white text-capitalize">
+        real time interview questions
+      </p>
+    </div>
   </div>
 </section>
