--- a/src/app/utility/header/header.component.html
+++ b/src/app/utility/header/header.component.html
@@ -1,7 +1,20 @@
 <div class="header">
-  <div class="d-flex justify-content-center align-items-end h-100">
-    <div class="col-lg-8 col-md-8 col-sm-12">
-      <h1 class="pb-5">Angular Interview</h1>
+  <div class="d-flex justify-content-center align-items-center h-100">
+    <div class="col-lg-8 col-md-8 col-sm-12 mobile-p">
+      <div class="row ">
+          <div class="col-md-8 col-sm-8 pt-5">
+            <h1>Angular Interview</h1>
+            <p>You must prepare <b>Angular Interview Questions</b> in this article to get your Job</p>
+            <a href="https://www.edureka.co/blog/interview-questions/top-angularjs-interview-questions-2016/" target="_blank" class="text-white">Read more</a>
+          </div>
+          <div class="col-md-4 col-sm-4">
+            <div class="img-section">
+              <div class="img-box">
+                <img src="../../../assets/angular-icon-1.svg" class="img-fluid" />
+              </div>
+            </div>
+          </div>
+      </div>
     </div>
   </div>
 </div>
