--- a/src/app/utility/footer/footer.component.html
+++ b/src/app/utility/footer/footer.component.html
@@ -1,7 +1,7 @@
 <section>
-  <div class="bg-dark p-2">
+  <div class="bg-dark footer-position">
     <div class="container">
-      <p class=" py-3 text-white text-capitalize">
+      <p class="text-white text-capitalize">
         real time interview questions
       </p>
     </div>
